completed product list page and started checkout
